[package]
name = "text_ed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu_glyph = "0.13"
winit = "0.25"
env_logger = "0.8"
log = "0.4"
wgpu = "0.9"
pollster = "0.2"
pixels = "0.5.0"
futures = "0.3"

[dependencies.pyo3]
version = "0.14.2"
features = ["auto-initialize"]
