[package]
name = "text_ed"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu_glyph = "0.16"
wgpu = "0.12"
winit = "0.26"
pixels = "0.9.0"
futures = "0.3"
env_logger = "0.8"
log = "0.4"
pollster = "0.2"
